---------------------------------------------------------------------------------------------------
Version: 0.8.16
Date: 2025-02-07
  Features:
    - The mod now takes into account spoil results of items
  Balancing:
    - Maraxsis sand now has sane refine time
---------------------------------------------------------------------------------------------------
Version: 0.8.15
Date: 2025-01-19
  Features:
    - Added startup settings that modify refining time, for those who want it easier or harder
---------------------------------------------------------------------------------------------------
Version: 0.8.14
Date: 2025-01-16
  Bugfixes:
    - Fixed crash when incorporating modded smelting recipe
---------------------------------------------------------------------------------------------------
Version: 0.8.13
Date: 2025-01-11
  Features:
    - Added startup setting to change promethium chunk spoil time. May also be turned off by setting to zero
---------------------------------------------------------------------------------------------------
Version: 0.8.12
Date: 2025-01-05
  Locale:
    - Fixed Refinery's tooltips on item input not showing
---------------------------------------------------------------------------------------------------
Version: 0.8.11
Date: 2025-01-05
  Bugfixes:
    - Fixed flaw in refining time calculation logic that could make items referenced by looping recipes not refinable. This fixes Maraxsis compatibility for carbon fiber (https://mods.factorio.com/mod/promethium-quality/discussion/6778a764a4b563f1270adeb7)
---------------------------------------------------------------------------------------------------
Version: 0.8.10
Date: 2025-01-04
  Minor Features:
    - Added startup setting "Debug refining graph" allowing you to, albeit very verbosely, check why a specific item is not refinable
---------------------------------------------------------------------------------------------------
Version: 0.8.9
Date: 2025-01-04
  Bugfixes: